<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/nen2"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_name_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_100"
        android:text="@string/app_name"
        android:textSize="@dimen/s_40"
        android:textColor="@color/white"
        android:gravity="center"/>
    <TextView
        android:id="@+id/tv_version_app"
        android:text="@string/txt_version"
        android:layout_width="wrap_content"
        android:textColor="@color/Chartreuse"
        android:textSize="@dimen/s_20"
        android:layout_below="@+id/tv_name_app"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnWallpaper"
            android:layout_width="@dimen/w_250"
            android:text="@string/txt_wallpaper"
            android:textSize="@dimen/s_30"
            android:onClick="eventClickPhoto"
            android:textColor="@color/GreenYellow"
            android:background="@drawable/button_gradient"
            android:layout_height="@dimen/h_100"/>
        <Button
            android:id="@+id/btnDownload"
            android:layout_width="@dimen/w_250"
            android:text="@string/txt_download"
            android:textColor="@color/GreenYellow"
            android:textSize="@dimen/s_30"
            android:onClick="eventClickDownload"
            android:background="@drawable/button_gradient"
            android:layout_marginTop="@dimen/h_10"
            android:layout_height="@dimen/h_100"/>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</RelativeLayout>