<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/nen2"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/s_20"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_dialog_name"
            android:layout_width="wrap_content"
            android:text="@string/txt_setWallpaper"
            android:layout_gravity="center"
            android:textSize="@dimen/s_20"
            android:textColor="@color/white"
            android:padding="5dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnHomeScreen"
            android:layout_width="@dimen/w_200"
            android:shadowColor="#2AA89B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_marginTop="@dimen/h_10"
            android:text="@string/txt_home_screen"
            android:textColor="#EDEDFF"
            android:textSize="@dimen/s_10"
            android:background="@drawable/button_setwallpaper"
            android:layout_height="@dimen/w_50"/>
        <Button
            android:id="@+id/btnLockScreen"
            android:layout_width="@dimen/w_200"
            android:shadowColor="#2AA89B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:layout_marginTop="@dimen/h_10"
            android:shadowRadius="5"
            android:text="@string/txt_lock_screen"
            android:textColor="#EDEDFF"
            android:textSize="@dimen/s_10"
            android:background="@drawable/button_setwallpaper"
            android:layout_height="@dimen/w_50"/>
        <Button
            android:id="@+id/btnHomLockScreen"
            android:layout_width="@dimen/w_200"
            android:shadowColor="#2AA89B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:layout_marginTop="@dimen/h_10"
            android:textColor="#EDEDFF"
            android:text="@string/txt_home_lock_screen"
            android:textSize="@dimen/s_10"
            android:background="@drawable/button_setwallpaper"
            android:layout_height="@dimen/w_50"/>
        <Button
            android:id="@+id/btnCloseDialog"
            android:layout_width="wrap_content"
            android:text="@string/txt_close"
            android:layout_marginRight="@dimen/h_10"
            android:layout_marginEnd="@dimen/h_10"
            android:shadowColor="#2AA89B"
            android:layout_marginTop="@dimen/s_20"
            android:shadowDx="0"
            android:layout_gravity="center"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#EDEDFF"
            android:textSize="@dimen/s_10"
            android:background="@drawable/button_gradient_download"
            android:layout_height="@dimen/h_30"/>
    </LinearLayout>

</RelativeLayout>