<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/nen2"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_header_photo"
        android:layout_width="match_parent"
        android:background="@drawable/gradient_realative"
        android:layout_height="@dimen/w_50">
        <ImageView
            android:layout_width="@dimen/w_30"
            android:onClick="eventBack"
            android:contentDescription="@string/app_name"
            android:layout_centerVertical="true"
            android:src="@drawable/image_select_back"
            android:layout_height="@dimen/w_30"/>
        <TextView
            android:id="@+id/tv_photo"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_photo"
            android:textSize="@dimen/s_30"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/rl_select_photo"
        android:layout_below="@+id/rl_header_photo"
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@drawable/dot_background_photo"
        android:orientation="horizontal"
        android:layout_height="@dimen/w_50">
        <Button
            android:id="@+id/btnDefault"
            android:layout_width="@dimen/w_100"
            android:text="@string/txt_default"
            android:onClick="eventSelectDefault"
            android:layout_margin="5dp"
            android:shadowColor="#2AA89B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#EDEDFF"
            android:textSize="@dimen/s_10"
            android:background="@drawable/button_gradient_download"
            android:layout_height="@dimen/w_30"/>
        <Button
            android:id="@+id/btnFolder"
            android:layout_width="@dimen/w_100"
            android:text="@string/txt_folder"
            android:onClick="eventSelectFolder"
            android:shadowColor="#2AA89B"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="#EDEDFF"
            android:textSize="@dimen/s_10"
            android:background="@drawable/button_gradient_download"
            android:layout_height="@dimen/w_30"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/rl_select_photo"
        android:layout_height="match_parent">
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recycler_photo"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_no_data_photo"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_no_data"
            android:textColor="@color/white"
            android:textSize="@dimen/s_40"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>